Tsff 1657 tsff 1629 brev (#430)
* Støtte for tekst om automatisk behandlet vedtak

* bruker 2/3 av standard G-faktor istedenfor å bruke utregnet.